--- a/index.html
+++ b/index.html
@@ -4,9 +4,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Apple Clone</title>
 </head>
 <body>
-    
+    <ul class="navbar">
+        <li> <img class="navbarIcon" src="public/images/appleLogo.svg" alt="" srcset=""> </li>
+        <li> Store </li>
+        <li> Mac </li>
+        <li> iPad </li>
+        <li> iPhone </li>
+        <li> Watch </li>
+        <li> AirPods </li>
+        <li> TV & Home </li>
+        <li> Only on Apple </li>
+        <li> Accessories </li>
+        <li> Support </li>
+        <li> <img class="navbarIcon" src="public/images/searchIcon.png" alt="" srcset=""> </li>
+        <li> <img class="navbarIcon" src="public/images/shoppingBag.svg" alt="" srcset=""> </li>
+    </ul>
 </body>
 </html>
