section one created

--- a/index.html
+++ b/index.html
@@ -8,20 +8,35 @@
     <title>Apple Clone</title>
 </head>
 <body>
-    <ul class="navbar">
-        <li> <img class="navbarIcon" src="public/images/appleLogo.svg" alt="" srcset=""> </li>
-        <li> Store </li>
-        <li> Mac </li>
-        <li> iPad </li>
-        <li> iPhone </li>
-        <li> Watch </li>
-        <li> AirPods </li>
-        <li> TV & Home </li>
-        <li> Only on Apple </li>
-        <li> Accessories </li>
-        <li> Support </li>
-        <li> <img class="navbarIcon" src="public/images/searchIcon.png" alt="" srcset=""> </li>
-        <li> <img class="navbarIcon" src="public/images/shoppingBag.svg" alt="" srcset=""> </li>
-    </ul>
+    <nav>
+        <ul class="navbar">
+            <li> <img class="navbarIcon" src="images/appleLogo.svg" alt="" srcset=""> </li>
+            <li> Store </li>
+            <li> Mac </li>
+            <li> iPad </li>
+            <li> iPhone </li>
+            <li> Watch </li>
+            <li> AirPods </li>
+            <li> TV & Home </li>
+            <li> Only on Apple </li>
+            <li> Accessories </li>
+            <li> Support </li>
+            <li> <img class="navbarIcon" src="images/search.svg" alt="" srcset=""> </li>
+            <li> <img class="navbarIcon" src="images/shoppingBag.svg" alt="" srcset=""> </li>
+        </ul>
+    </nav>
+    <div class="sectionOne">
+        <div class="sectionOneText">    
+            <h1>iPhone 14 Pro</h1>
+            <h2>Pro.Beyond.</h2>
+            <sectionOneButtons>
+                <button> Learn more <img class="navbarIcon" src="images/arrow.svg" alt="" srcset=""> </button>
+                <button> Buy <img class="navbarIcon" src="images/arrow.svg" alt="" srcset=""></button>
+            </sectionOneButtons>
+            </div>
+        <div class="sectionOneImageSection">
+            <img class="sectionOneImage" src="images/mainImage.jpg" alt="" srcset="">
+        </div>
+    </div>
 </body>
 </html>
