section two created

--- a/index.html
+++ b/index.html
@@ -25,18 +25,34 @@
             <li> <img class="navbarIcon" src="images/shoppingBag.svg" alt="" srcset=""> </li>
         </ul>
     </nav>
+
     <div class="sectionOne">
         <div class="sectionOneText">    
             <h1>iPhone 14 Pro</h1>
             <h2>Pro.Beyond.</h2>
-            <sectionOneButtons>
+            <div>
                 <button> Learn more <img class="navbarIcon" src="images/arrow.svg" alt="" srcset=""> </button>
                 <button> Buy <img class="navbarIcon" src="images/arrow.svg" alt="" srcset=""></button>
-            </sectionOneButtons>
+            </div>
             </div>
         <div class="sectionOneImageSection">
             <img class="sectionOneImage" src="images/mainImage.jpg" alt="" srcset="">
         </div>
     </div>
+
+    <div class="sectionTwo">
+        <div class="sectionTwoText">
+            <h1>iPhone 14</h1>
+            <h2>Big and bigger.</h2>
+            <div>
+                <button> Learn more <img class="navbarIcon" src="images/arrow.svg" alt="" srcset=""> </button>
+                <button> Buy <img class="navbarIcon" src="images/arrow.svg" alt="" srcset=""></button>
+            </div>
+        </div>
+        <div class="sectionTwoImageSection">
+            <img class="sectionTwoImage" src="images/mainImage2.jpg" alt="" srcset="">
+        </div>
+    </div>
+
 </body>
 </html>
