--- a/index.html
+++ b/index.html
@@ -54,5 +54,16 @@
         </div>
     </div>
 
+        <div class="sectionThree">
+            <div class="sectionThreeText">
+                <div> <img src="images/watchseries8.png" alt="" srcset=""></div>
+                <h2>A healthy leap ahead.</h2>
+                <div>
+                    <button> Learn more <img class="navbarIcon" src="images/arrow.svg" alt="" srcset=""> </button>
+                    <button> Buy <img class="navbarIcon" src="images/arrow.svg" alt="" srcset=""></button>
+                </div>
+            </div>
+        </div>
+
 </body>
 </html>
